--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,62 @@
-bod{
-    background-color: black;
+/*RESET*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.ticke{
-    padding-top: 50px;
-    font-size: 30px;
-    text-align: center;
+/*GENERAL*/
+body{
+    background-color: black;
     color: white;
 }
-.btn-download butto{
-    cursor: pointer;
+
+header{
+    text-align: center;
     font-size: 40px;
-    color: white;
-    background-color: transparent;
-    border: none;
+    color: red;
+    border-bottom: 2px solid rgba(255, 0, 0, 0.2);
+    background-color: rgb(16, 16, 16);
+}
+
+/*section input*/
+.section{
+    display: flex;
+    justify-content: center;
+    margin: 50px 0;
+}
+
+.form-container{
+    background-color: white;
+    color: black;
+    text-align: center;
+    width: 600px;
+    padding: 50px 50px 20px 50px;
+    border: 2px solid rgba(255, 0, 0, 0.45);
+    border-radius: 30px;
+}
+
+.input{
+    display: flex;
+    justify-content: space-between;
+}
+.user-input{
+    margin-bottom: 50px;
+    border-radius: 6px;
+    border: 2px solid rgba(255, 0, 0, 0.45);
+}
+
+/*section message*/
+.form-message{
+    padding: 50px 50px 20px 50px;
+    background-color: white;
+    color: black;
+    border: 2px solid rgba(255, 0, 0, 0.45);
+    border-radius: 30px;
+    width: 600px;
+    text-align: center;
+}
+.message{
+    margin-bottom: 50px;
+    font-size: 30px;
 }
